--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
     border-radius: 50%;
     border: 10px solid #9F40FF;
     background-color: #c790ff;
-    height: 512px;
-    width: 512px;
-    margin-left: 48px;
-    margin-right: 48px;
+    height: 450px;
+    width: 450px;
+    margin-left: 4%;
+    margin-right: 4%;
 }
 
 .main-button-text{
@@ -32,8 +32,8 @@
 }
 
 .button-image{
-    height: 65%;
-    width: 65%;
+    height: 60%;
+    width: 60%;
 }
 
 
@@ -67,3 +67,21 @@
     min-height: 768px;
 }
 
+#login-toolbar{
+    margin-right: 1%;
+}
+
+#toolbar-divider{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 90%; 
+    border: 1px solid #9F40FF;
+}
+
+#main-button-row{
+    margin-top: 1%;
+}
+
+#sub-button-row{
+    margin-top: 2%;
+}
