--- a/style.css
+++ b/style.css
@@ -92,3 +92,70 @@
 #text-row{
     margin-top: 1%;
 }
+
+
+.add-pic-btn {
+    padding: 10px;
+    border-radius: 50%;
+    border: 3px solid #c04ee5;
+    background-color: #d891ef;
+    margin-left: auto;
+    margin-right: auto;
+}
+#add-pic-sub-button {
+    height: 50px;
+    width: 50px;
+}
+
+#add-habit-sub-button {
+    height: 50px;
+    width: 50px;
+}
+
+.add-habit-btn {
+    padding: 10px;
+    border-radius: 50%;
+    border: 3px solid #c04ee5;
+    background-color: #d891ef;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn-light{
+    background-color: #d891ef;
+    color: white;
+}
+
+.btn-light:hover {
+    background-color: #c04ee5;
+    color: white;
+}
+
+#habits-date {
+    color: white;
+    font: italic;
+}
+
+#habits-list {
+    margin-left: 20px;
+    color: white;
+}
+
+
+#image-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+#image-col-1 {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.col img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
