Created functions for loading toolbar via JS. time to test. forgot to switch to my branch before working

--- a/client/style.css
+++ b/client/style.css
@@ -83,6 +83,19 @@
     border: 1px solid #9F40FF;
 }
 
+#logo-text-placeholder{
+    color: white;
+    font-weight: 500;
+}
+
+#login-text{
+    font-weight: 500;
+}
+
+#login-buffer{
+    min-width: 2%;
+}
+
 #main-button-row{
     margin-top: 1%;
 }
