--- a/client/style.css
+++ b/client/style.css
@@ -45,12 +45,23 @@
     color: #c790ff;
 }
 
+.center-card{
+    width: 30%;
+    margin: 25%;
+    margin-left: 35%;
+    margin-right: 35%;
+}
 
-
+#login-container{
+    width: 100%;
+    height: 100%;
+    background-color: red;
+}
 
 #toolbar{
     min-height: 128px;
     padding-top: 10px;
+    margin-top: 0.5%;
 }
 
 #toolbar-logo{
