Added functionality to add an image for a user with a form.

--- a/client/style.css
+++ b/client/style.css
@@ -227,6 +227,11 @@
 
 /* Swarathmika CSS */
 
+#add-button-logo {
+    height: 25px;
+    width: 25px;
+}
+
 .photo-image {
     display: block;
     height: 5%;
